fix: update z-index variables

--- a/src/components/structures/Page/page.module.css
+++ b/src/components/structures/Page/page.module.css
@@ -1,8 +1,5 @@
 @layer ye-structures {
   .root {
-    --z-index-stack-1: 1;
-    --z-index-stack-2: 101;
-
     position: relative;
     min-height: 100vh;
     overflow: hidden;
@@ -27,7 +24,7 @@
   }
 
   .side-nav {
-    z-index: var(--z-index-stack-1);
+    z-index: var(--ye-z-base);
     width: var(--ye-layout-side-nav-width);
     max-width: 100%;
     height: 100vh;
@@ -42,7 +39,7 @@
     @media (--media-max-lg) {
       position: fixed;
       left: -2px;
-      z-index: var(--z-index-stack-2);
+      z-index: var(--ye-z-topnav);
       width: var(--ye-layout-side-nav-toggle-width);
     }
 
@@ -81,7 +78,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: var(--z-index-stack-2);
+    z-index: var(--ye-z-topnav);
     width: 100%;
     transition: all ease-in-out 0.5s;
     transition-property: width, left;
